issue #221 Phase 0 step 3c: ring-3 syscall trap 実証 + latency 計測 (★go/no-go)
#221 native backend の中核機構 = 「guest user code (ring 3) の syscall を VM-exit で
VMM (emulin Java 層) にトラップし sysno/引数を回収」を実 vCPU で実証し、1 syscall
あたりの trap round-trip latency を実測した。

新規/拡張:
- KvmBindings.java: KVM_SET_MSRS(0x4008AE89)/KVM_GET_MSRS(0xC008AE88)、
  kvm_msrs/kvm_msr_entry offset、MSR index (EFER/STAR/LSTAR/SYSCALL_MASK/
  KERNEL_GS_BASE 等)、kvm_regs の欠落 offset (R9=72 syscall arg6 / R11=88 / R12..R15)。
- KvmSyscallSmoke.java (~300 行): 4KB page table 全 level PTE_US (ring-3 実行可)、
  EFER.SCE + STAR/LSTAR/FMASK を KVM_SET_MSRS で設定、cs/ss dpl=3。
  - user code (ring 3): mov eax,0xCAFE; mov edi,0xBEEF; syscall; jmp back
  - LSTAR stub (ring 0): hlt (→KVM_EXIT_HLT で trap) + sysretq (ring 3 復帰)
  - STAR=0x0023001000000000 (Linux 規約)。1 KVM_RUN = 1 完全 round-trip
    (sysretq→ring3→syscall→hlt→exit)。

実証 (WSL2 nested KVM): exit_reason=5(HLT) rax=0xcafe(sysno) rdi=0xbeef(arg0)
rcx=0x600c(retaddr) rip=0x7001 → ring-3 syscall が VMM にトラップし sysno/args
回収を確認 = #221 核心仮説の決定的実証。latency (200k verified-HLT traps):
(A) KVM_RUN round-trip median ~5.8µs / mean ~6.3µs、(B) +GET/SET_REGS ~7.8µs。

★go/no-go = conditional GO:
- 機構は明確に GO (ring-3 syscall trap + sysno/args 回収 実証)。
- latency median ~5.8µs (nested WSL2 KVM) は raw 5µs gate 超だが:
  * host は WSL2(=Hyper-V L1)、KVM guest は L2 = nested、VM-exit が L1↔L0 遷移で
    inflate。bare-metal/WHP (L1) は ~1-3µs 見込み (要測定、Spectre/MDS 依存)。
  * realistic +1.7µs は GET/SET_REGS 2 ioctl、KVM_CAP_SYNC_REGS で除去可。
- ★raw 5µs gate は誤った物差し (review 指摘): 正しい基準は native vs software
  interpreter の break-even。両 backend は同じ call_amd64 を共有 (syscall 実処理
  同一)、native 化の限界コストは trap latency T のみ、便益は syscall 以外の全命令が
  native 速度。break-even ≈ T/per-insn-cost ≈ ~200 命令/syscall → 実コードは syscall
  間に数千命令走るので nested 6µs でも compute-heavy は既に勝ち筋。syscall-heavy
  (emacs poll #206、50k-500k syscall/s) は per-syscall cost を下げないと支配される。
- 結論: 機構 GO、compute-bound 勝ち筋。syscall-heavy/interactive は (a)非 nested
  再測定(step 3f) +